Fix desktop file. KDE Partition Manager restarts itself with correct environmental variables.

BUG: 374272